Correction for settings page checkbox alignment

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -5,6 +5,9 @@
     border: 1px solid #ccc;
     background-color: #fcfcfc;
 }
+#fbc_settings_form .checkbox {
+    margin-left: 20px;
+}
 #getToken {
     max-width: 112px;
     text-align: center;
